--- a/Ddac.ditamap
+++ b/Ddac.ditamap
@@ -22,5 +22,6 @@
     <topicref format="ditamap" href="keydefs.ditamap" keys="keydefsmap"
         processing-role="resource-only"/>
     <topicref format="markdown" href="conref.md" keys="conrefs" processing-role="resource-only"/>
-    <topicref format="ditaval" href="exclude-mac.ditaval" processing-role="resource-only"/>
+    <topicref href="_coverpage.md" format="markdown"/>
+    <topicref href="index.html" format="html" processing-role="resource-only"/>
 </map>
