--- a/keydefs.ditamap
+++ b/keydefs.ditamap
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE map PUBLIC "-//OASIS//DTD DITA Map//EN" "map.dtd">
+<!DOCTYPE map PUBLIC "-//OASIS//DTD XDITA Map//EN" "map.dtd">
 <map id="keydefs">    
     <title>Key definitions</title>
     <keydef keys="product_name">
         <topicmeta>
             <linktext><ph>Grunt Master 6000</ph></linktext>
         </topicmeta>
-    </keydef>
+    </keydef>    
+    <topicref href="https://www.oasis-open.org/committees/download.php/65658/lwdita.pdf" ></topicref>
 </map>
