--- a/keydefs.ditamap
+++ b/keydefs.ditamap
@@ -9,7 +9,7 @@
     
     <keydef keys="LwDITA-Spec">
         <topicmeta>
-            <linktext><ph><xref href="https://www.oasis-open.org/committees/download.php/65658/lwdita.pdf" scope="external" format="pdf"/></ph></linktext>
+            <linktext><ph>[Lightweight DITA Specification](https://www.oasis-open.org/committees/download.php/65658/lwdita.pdf)</ph></linktext>
         </topicmeta>
     </keydef> 
 </map>
