--- a/keydefs.ditamap
+++ b/keydefs.ditamap
@@ -3,7 +3,12 @@
 <map id="keydefs">    
     <keydef keys="product_name">
         <topicmeta>
-            <linktext><ph>Grunt Master 6000</ph></linktext>
+            <linktext><ph>Acme Meme Maker 2000</ph></linktext>
+        </topicmeta>
+    </keydef>    
+    <keydef keys="company_name">
+        <topicmeta>
+            <linktext><ph>Acme Inc.</ph></linktext>
         </topicmeta>
     </keydef>
     <keydef keys="LwDITA-Spec" href="https://www.oasis-open.org/committees/download.php/65658/lwdita.pdf" scope="external" format="pdf">
@@ -11,7 +16,7 @@
             <linktext>Lightweight DITA Specification</linktext>
         </topicmeta>
     </keydef>
-    <keydef keys="gruntmaster-downloads" href="https://gruntmaster6000.com/downloads" scope="external" format="html">
+    <keydef keys="mememaker-downloads" href="https://mememaker2000.acme.com/downloads" scope="external" format="html">
         <topicmeta>
             <linktext>Downloads</linktext>
         </topicmeta>
